tests/fixtures/pass/generic_multiple_instances.sali
let identity(T: type)(move value: T): T = value

let main(): i32 = if identity(bool)(true) {
  identity(i32)(42)
} else {
  0
}
