tests/fixtures/fail/generic_missing_return_type.sali
let identity(T: type)(move value: T) = value

let main(): i32 = identity(i32)(42)
